# oftc-ircd

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  circle.yml  configure.ac  run_tests
include/: Makefile.am  buffer.h  client.h  command.h  config.h  connection.h  hash.h  irc.h  list.h  listener.h  lstring.h  memory.h  module.h  murmurhash3.h  network.h  numeric.h  parser.h  server.h  serverstate.h  vector.h
m4/: options.m4
modules/: Makefile.am  nick.c  user.c
src/: Makefile.am  buffer.c  client.c  command.c  config.c  connection.c  hash.c  list.c  listener.c  lstring.c  main.c  memory.c  module.c  murmurhash3.c  network.c  parser.c  server.c  serverstate.c  vector.c
tests/: Makefile.am  buffer_stub.c  buffer_stub.h  buffer_tests.c  client_stub.c  client_stub.h  client_tests.c  command_stub.c  command_stub.h  command_tests.c  config_stub.c  config_stub.h  config_tests.c  connection_stub.c  connection_stub.h  connection_tests.c  hash_stub.c  hash_stub.h  hash_tests.c  json_object_stub.c  json_object_stub.h  json_tokener_stub.c  json_tokener_stub.h  list_tests.c  listener_tests.c  lstring_tests.c  memory_stub.c  memory_stub.h  module_tests.c  murmurhash3_stub.c  murmurhash3_stub.h  network_stub.c  network_stub.h  network_tests.c  oftc_ircd_tests.c  opmock.c  parser_stub.c  parser_stub.h  parser_tests.c  server_stub.c  (+15 more)
tests/modules/: nick_tests.c  user_tests.c
