noinst_HEADERS= client.h        \
                config.h        \
                hash.h          \
                listener.h      \
                lstring.h       \
                memory.h        \
                module.h        \
                murmurhash3.h   \
                network.h       \
                serverstate.h   \
                vector.h
