noinst_HEADERS= buffer.h        \
                client.h        \
                config.h        \
                hash.h          \
                irc.h           \
                listener.h      \
                lstring.h       \
                memory.h        \
                module.h        \
                murmurhash3.h   \
                network.h       \
                server.h        \
                serverstate.h   \
                vector.h
